--- a/_portfolio/car.html
+++ b/_portfolio/car.html
@@ -1,7 +1,5 @@
 ---
 title: "A Scion FR-S"
-excerpt: "<img src='/images/car.jpg'><br/><img src='/images/car0.JPG'>"
+excerpt: "<img src='/images/car.jpg' width="600"><br/><img src='/images/car0.JPG' width="600">"
 collection: portfolio
 ---
-
-A gift for my husband! One of his favorite cars!
