--- a/_portfolio/car.html
+++ b/_portfolio/car.html
@@ -1,5 +1,5 @@
 ---
 title: "A Scion FR-S"
-excerpt: "<img src='/images/car.jpg' width="600"><br/><img src='/images/car0.JPG' width="600">"
+excerpt: "<img src='/images/car.jpg' width='600'><br/><img src='/images/car0.JPG' width='600'>"
 collection: portfolio
 ---
