--- a/_portfolio/totoro.html
+++ b/_portfolio/totoro.html
@@ -1,5 +1,5 @@
 ---
 title: "A Totoro"
-excerpt: "<img src='/images/totoro.JPG' width='600'><br/><img src='/images/totoro0.JPG' width='600'>"
+excerpt: "<img src='/images/totoru.JPG' width='600'><br/><img src='/images/totoru0.JPG' width='600'>"
 collection: portfolio
 ---
