--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -4,7 +4,7 @@ title: "Drawing is FUN!"
 permalink: /portfolio/
 author_profile: true
 ---
-Check out a portfolio of my drawings with iPad.
+Check out this (small) portfolio of my drawings with iPad.
 {% include base_path %}
 
 
